[gd_scene load_steps=22 format=2]

[ext_resource path="res://sugar.gd" type="Script" id=1]
[ext_resource path="res://player.tscn" type="PackedScene" id=2]
[ext_resource path="res://thorn.tscn" type="PackedScene" id=3]
[ext_resource path="res://background/block.png" type="Texture" id=4]
[ext_resource path="res://asset/sound/gamemusic-6082.mp3" type="AudioStream" id=5]
[ext_resource path="res://background/background1.jpg" type="Texture" id=6]
[ext_resource path="res://asset/candy.png" type="Texture" id=7]
[ext_resource path="res://thorn2.gd" type="Script" id=8]
[ext_resource path="res://GameStage.gd" type="Script" id=9]
[ext_resource path="res://asset_item/Item_grass.tscn" type="PackedScene" id=10]
[ext_resource path="res://Area2D.gd" type="Script" id=11]
[ext_resource path="res://asset_item/Obstacles_Tree.tscn" type="PackedScene" id=12]
[ext_resource path="res://asset_item/Item_fire.tscn" type="PackedScene" id=13]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 64, 0, 64, 64, 0, 64, 0, 0 )

[sub_resource type="TileSet" id=2]
0/name = "block.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="GDScript" id=4]
script/source = "extends KinematicBody2D

var velocity = Vector2(0, 0)
var speed = 200
var jump = -700
var gravity = 50
var mode_shield = false
var mode_fire = false
var mode_water = false

func _physics_process(delta):
	velocity.x = 0
	
	if Input.is_action_pressed(\"ui_right\"):
		velocity.x = speed
		$bean.play(\"walk\")
		$bean.flip_h = true
		
		
	elif Input.is_action_pressed(\"ui_left\"):
		velocity.x = -speed
		$bean.play(\"walk\")
		$bean.flip_h = false
		
	else:
		$bean.play(\"default\")
	
	if not is_on_floor():
		$bean.play(\"jump\")
	
	if  get_parent().isRotate:
		velocity.y += gravity/2
		
	if !get_parent().isRotate:
		velocity.y += gravity
	
	if Input.is_action_pressed(\"jump\") and is_on_floor():
		velocity.y += jump
		if(GameData.effectSound == 1):
			JumpSound.play()
		
#	velocity.y += gravity
	velocity = move_and_slide(velocity, Vector2.UP)
	
	if(mode_shield):                  # shield image
		$shield.visible = true
	else:
		$shield.visible = false
	
	if(mode_fire):                 # fire image
		$fire.visible = true
	else:
		$fire.visible = false
	if(mode_water):                 # grass image
		$water.visible = true
	else:
		$water.visible = false
	


func _on_fire_body_entered(body):
	if body == self:
		mode_fire = true
		mode_water = false


func _on_water_body_entered(body):
	if body == self:
		mode_fire = false
		mode_water = true
"

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="Animation" id=5]

[sub_resource type="Animation" id=6]
resource_name = "myAnimation"
tracks/0/type = "value"
tracks/0/path = NodePath("../tree2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.39, 0.39 ), Vector2( 0.39, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../tree2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 42, -299 ), Vector2( 82, -299 ) ]
}

[sub_resource type="Animation" id=7]

[sub_resource type="Animation" id=8]
resource_name = "myAnimation"
tracks/0/type = "value"
tracks/0/path = NodePath("../tree2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.39, 0.39 ), Vector2( 0.39, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../tree2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 42, -299 ), Vector2( 82, -299 ) ]
}

[node name="stage5" type="Node2D"]
position = Vector2( 524, 288 )
script = ExtResource( 9 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 5.00391, 131.202 )
scale = Vector2( 6.14899, 7.54163 )
texture = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -14.9962, 27.2023 )
scale = Vector2( 2.02279, 2.26392 )
texture = ExtResource( 6 )

[node name="TileMap" type="TileMap" parent="."]
modulate = Color( 1, 1, 1, 0.705882 )
position = Vector2( -558.996, -292.798 )
tile_set = SubResource( 2 )
collision_layer = 2
format = 1
tile_data = PoolIntArray( -196600, 0, 0, -196599, 0, 0, -196598, 0, 0, -196597, 0, 0, -196596, 0, 0, -196595, 0, 0, -196594, 0, 0, -196593, 0, 0, -131064, 0, 0, -131060, 0, 0, -131057, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65524, 0, 0, -65521, 0, 0, 0, 0, 0, 15, 0, 0, 65536, 0, 0, 65551, 0, 0, 131072, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131087, 0, 0, 196608, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 262144, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262159, 0, 0, 327680, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327695, 0, 0, 393216, 0, 0, 393220, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393231, 0, 0, 458752, 0, 0, 458756, 0, 0, 458759, 0, 0, 458767, 0, 0, 524288, 0, 0, 524292, 0, 0, 524295, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 589824, 0, 0, 589831, 0, 0, 589835, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( -375, 293 )
scale = Vector2( 0.2, 0.2 )
script = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="player"]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="thorn" parent="." instance=ExtResource( 3 )]
position = Vector2( -286, -23 )
rotation = 1.5724
scale = Vector2( 1.68518, 1.52201 )
script = ExtResource( 8 )

[node name="thorn7" parent="." instance=ExtResource( 3 )]
position = Vector2( 23, -542 )
rotation = -4.71258
scale = Vector2( 1.08585, -1.3359 )
script = ExtResource( 8 )

[node name="thorn3" parent="." instance=ExtResource( 3 )]
position = Vector2( 205, -474 )
rotation = -4.71258
scale = Vector2( 1.7204, -1.41463 )
script = ExtResource( 8 )

[node name="thorn4" parent="." instance=ExtResource( 3 )]
position = Vector2( -149, -258 )
rotation = -6.28546
scale = Vector2( 1.61695, -1.16529 )
script = ExtResource( 8 )

[node name="sugar" type="Area2D" parent="."]
position = Vector2( 335, 234 )
collision_layer = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="sugar"]
position = Vector2( -280, 90 )
scale = Vector2( 0.168115, 0.195211 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="sugar"]
position = Vector2( -282, 91 )
shape = SubResource( 3 )

[node name="gameMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="water" parent="." instance=ExtResource( 10 )]
position = Vector2( -176, 120 )
rotation = 3.14159

[node name="tree2" parent="." instance=ExtResource( 12 )]
position = Vector2( 42, -299 )
rotation = 1.5708
scale = Vector2( 0.39, 0.39 )

[node name="Area_Tree" type="Area2D" parent="tree2"]
script = ExtResource( 11 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="tree2/Area_Tree"]
scale = Vector2( 1.27535, 1.27535 )
polygon = PoolVector2Array( -18, 63, -17, 28, -30, 41, -56, 24, -67, -9, -60, -55, -22, -91, 20, -94, 58, -56, 68, -27, 73, 3, 61, 11, 60, 27, 35, 41, 18, 26, 21, 64 )

[node name="Timer" type="Timer" parent="tree2/Area_Tree"]
one_shot = true

[node name="Timer2" type="Timer" parent="tree2/Area_Tree"]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="tree2"]
reset_on_save = false
anims/RESET = SubResource( 5 )
anims/myAnimation = SubResource( 6 )

[node name="fire" parent="." instance=ExtResource( 13 )]
position = Vector2( 350, -389 )
rotation = 3.14159

[node name="tree3" parent="." instance=ExtResource( 12 )]
position = Vector2( 238, 194 )
scale = Vector2( 0.39, 0.39 )

[node name="Area_Tree" type="Area2D" parent="tree3"]
script = ExtResource( 11 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="tree3/Area_Tree"]
scale = Vector2( 1.27535, 1.27535 )
polygon = PoolVector2Array( -18, 63, -17, 28, -30, 41, -56, 24, -67, -9, -60, -55, -22, -91, 20, -94, 58, -56, 68, -27, 73, 3, 61, 11, 60, 27, 35, 41, 18, 26, 21, 64 )

[node name="Timer" type="Timer" parent="tree3/Area_Tree"]
one_shot = true

[node name="Timer2" type="Timer" parent="tree3/Area_Tree"]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="tree3"]
reset_on_save = false
anims/RESET = SubResource( 7 )
anims/myAnimation = SubResource( 8 )

[connection signal="body_entered" from="thorn" to="thorn" method="_on_thorn_body_entered"]
[connection signal="body_entered" from="thorn7" to="thorn7" method="_on_thorn_body_entered"]
[connection signal="body_entered" from="thorn3" to="thorn3" method="_on_thorn_body_entered"]
[connection signal="body_entered" from="thorn4" to="thorn4" method="_on_thorn_body_entered"]
[connection signal="body_entered" from="sugar" to="sugar" method="_on_lastSugar_body_entered"]
[connection signal="body_entered" from="water" to="player" method="_on_water_body_entered"]
[connection signal="body_entered" from="tree2/Area_Tree" to="tree2/Area_Tree" method="_on_Area_Tree_body_entered"]
[connection signal="timeout" from="tree2/Area_Tree/Timer" to="tree2/Area_Tree" method="_on_Timer_timeout"]
[connection signal="timeout" from="tree2/Area_Tree/Timer2" to="tree2/Area_Tree" method="_on_Timer2_timeout"]
[connection signal="animation_finished" from="tree2/AnimationPlayer" to="tree2/Area_Tree" method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="fire" to="player" method="_on_fire_body_entered"]
[connection signal="body_entered" from="tree3/Area_Tree" to="tree3/Area_Tree" method="_on_Area_Tree_body_entered"]
[connection signal="timeout" from="tree3/Area_Tree/Timer" to="tree3/Area_Tree" method="_on_Timer_timeout"]
[connection signal="timeout" from="tree3/Area_Tree/Timer2" to="tree3/Area_Tree" method="_on_Timer2_timeout"]
[connection signal="animation_finished" from="tree3/AnimationPlayer" to="tree3/Area_Tree" method="_on_AnimationPlayer_animation_finished"]
